Fix animation overflow and reduce CSS payload

--- a/css/spinner.css
+++ b/css/spinner.css
@@ -25,7 +25,7 @@
   stroke-linecap: round;
   stroke-dasharray: 283;
   stroke-dashoffset: 280;
-  stroke-width: 10px;
+  stroke-width: 5px;
   transform-origin: 50% 50%;
 }
 
